tests/paczka1/fuzzy1/90034320.err
Error in line 1: A149 A149 58,9
Error in line 5: uR8I A149 59,3
Error in line 3: QF2qcYzNuz A149 31,3
Error in line 11: lsOhI S30 69,4
Error in line 13: lsOhI A149 40,2
Error in line 10: QF2qcYzNuz A670 57,7
Error in line 16: A149 A460 413,6
Error in line 25: kF7xoYL5 A460 41,0
Error in line 30: I2buI1HtHJk A460 24,5
Error in line 24: A149 A460 11,6
